--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,13 @@
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-                
+            <StackLayout>
+                <Entry x:Name="cityEntry" Placeholder="Enter city name or ZIP code" />
+                <Button Text="Get Weather" Clicked="OnGetWeatherClicked" />
+                <Label x:Name="cityNameLabel" FontSize="24" HorizontalOptions="CenterAndExpand" />
+                <Label x:Name="temperatureLabel" FontSize="32" HorizontalOptions="CenterAndExpand" />
+                <Label x:Name="descriptionLabel" FontSize="18" HorizontalOptions="CenterAndExpand" />
+            </StackLayout>
         </VerticalStackLayout>
     </ScrollView>
 
